--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -36,7 +36,7 @@
 
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
-imag[alt="kitty 5"] {
+imag[alt="Kitty 5"] {
   position: absolute;
   z-index: 3;
   top: 217px;
